wallet ui in progress

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,6 +13,7 @@
     <color name="fsm_text_color80">#CC424242</color>
     <color name="line_color">#FB8C00</color>
     <color name="fsm_bg_teal">#00897B</color>
+    <color name="fsm_bg_teal60">#9900897B</color>
 
 
 
