--- a/app/src/main/res/layout/activity_finza_home.xml
+++ b/app/src/main/res/layout/activity_finza_home.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-
         <import type="android.view.View" />
 
         <variable
@@ -17,7 +16,6 @@
         android:id="@+id/drawer_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/black"
         android:fitsSystemWindows="true">
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -41,6 +39,7 @@
                 android:layout_marginStart="0dp"
                 android:layout_marginEnd="0dp"
                 android:background="@color/fsm_bg_teal"
+                android:visibility="gone"
                 app:itemIconTint="@color/fsm_bg_light_teal"
                 app:itemTextAppearanceActive="@style/BottomNavigation.ActiveItemTextAppearance"
                 app:itemTextColor="@color/fsm_bg_light_teal"
@@ -60,8 +59,8 @@
                 android:elevation="@dimen/_5sdp"
                 android:foreground="?selectableItemBackground"
                 android:onClick="@{v-> vm.onClick(v)}"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent">
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent">
 
                 <com.google.android.material.imageview.ShapeableImageView
                     android:layout_width="@dimen/_42sdp"
@@ -100,6 +99,16 @@
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
+
+                <ImageView
+                    android:layout_width="@dimen/_200sdp"
+                    android:layout_height="@dimen/_150sdp"
+                    android:layout_marginBottom="@dimen/_40sdp"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/fsm_logo"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent" />
 
                 <LinearLayout
                     android:id="@+id/ll1"
@@ -174,6 +183,7 @@
                     app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                     app:layout_constraintBottom_toTopOf="@+id/tvAppVersion"
                     app:layout_constraintTop_toBottomOf="@+id/ll1"
+                    tools:itemCount="7"
                     tools:listitem="@layout/holder_drawer" />
 
                 <TextView
