--- a/app/src/main/res/layout/holder_drawer.xml
+++ b/app/src/main/res/layout/holder_drawer.xml
@@ -24,7 +24,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="@dimen/_10sdp"
-        android:layout_marginTop="@dimen/_10sdp"
+        android:paddingTop="@dimen/_10sdp"
         android:foreground="?selectableItemBackground"
         android:onClick="@{v-> callback.onItemClick(v,bean,pos)}">
 
